terminus-ui/src/icon/icon.component.scss
@import './../scss/helpers/reset';
@import './../scss/helpers/spacing';
@import './../scss/helpers/typography';
@import './../scss/helpers/color';


//
// @component
//  Icon
// @description
//  Styles for the icon component
//
.ts-icon {
  @include reset;
  display: inline-block;

  &.ts-icon--inline {
    $margin: spacing(small, 2);
    $space: calc(-#{$margin} - 2px);

    // Custom spacing values to match horizontal text rhythm
    margin-left: #{$space};
    margin-right: #{$space};
    // Match the 16px type size as close as possible
    transform: scale(.666);
  }

  // Theme support:
  &.ts-icon--primary {
    color: color(primary);
  }

  &.ts-icon--accent {
    color: color(accent);
  }

  &.ts-icon--warn {
    color: color(warn);
  }

  .c-icon {
    vertical-align: bottom;
  }
}

// Nested classes belong here
.c-icon {
  &.c-icon--inline {
    // Better align to the text baseline
    margin-bottom: -1px;
    vertical-align: bottom;
  }

  // Style overrides when nested inside a mat-chip
  .mat-chip & {
    &.mat-icon {
      // Match text size
      font-size: 18px;
      height: 1em;
      vertical-align: bottom;
      width: 1em;
    }
  }

  // Fix poor icon alignment inside a form field prefix|suffix
  .mat-form-field-prefix &,
  .mat-form-field-suffix & {
    margin-right: .2em;
    position: relative;
    top: -.06em;
  }

  // Push back opacity for icons in disabled form fields
  .mat-form-field-disabled & {
    opacity: .4;
  }
}

